src/templates/blogTemplate.module.css
.modalOpenBody {
  z-index: 1;
}

.headline {
  color: rgba(0, 0, 0, 0.84);
  line-height: 48px;
  font-size: 32px;
  margin: 16px 0px;
  padding: 0 8px;
}

.date {
  color: rgba(0, 0, 0, 0.54);
  font-size: 16px;
  margin-bottom: 12px;
  padding: 0 8px;
}

.main {
  display: flex;
  justify-content: center;
}

.main > .socials {
  width: 5%;
  padding-top: 32px;
}

.main > .content {
  width: 80%;
  max-width: 960px;
}

@media screen and (max-width: 1024px) {
  .main > .content {
    width: 90%;
  }
}

.main > .tocwrapper {
  width: 15%;
  padding-left: 16px;
  padding-top: 32px;
}

/* 記事 */
.content {
  margin-top: 32px;
  color: rgba(0, 0, 0, 0.84);
}

@media screen and (max-width: 1024px) {
  .content {
    margin-top: 16px;
  }
}

.content > p,
.content > ul {
  font-size: 18px;
  line-height: 28px;
}

.content > h1 {
  font-size: 32px;
  line-height: 32px;
}

.content > h2 {
  font-size: 28px;
  line-height: 32px;
  border-bottom: solid 2px #368ccb;
  font-weight: bold;
}

.content > h3 {
  font-size: 20px;
  line-height: 32px;
  font-weight: bold;
}

.content > h4 {
  font-size: 18px;
  font-weight: bold;
}

.content strong {
  background: linear-gradient(transparent 75%, palegreen 25%);
}

.content > blockquote {
  font-size: 18px;
  font-style: italic;
}

.content > p,
.content > img,
.content > div,
.content > h1,
.content > h2,
.content > h3,
.content > h4,
.content > ul,
.content > blockquote {
  margin-bottom: 24px;
  word-break: break-all;
}

/* ジャンプ時の固定ヘッダ(9vh)ずれ対策(1vhは余白として10vhにしている) */
.content > h1,
.content > h2,
.content > h3,
.content > h4 {
  margin-top: -10vh;
  padding-top: 10vh;
}

.content a {
  /* paddingがlinkとなってコピペできないのでそれをやめるために、そもそもリンクを消す。
  FIXME: リンク機能も欲しいので恒久対応は考える
  */
  display: none;
}

.content > h3,
.content > h4 {
  margin-bottom: 12px;
  word-break: break-all;
}

.content li {
  margin-bottom: 8px;
}

.content ul {
  list-style: circle inside;
  margin-left: 16px;
}

.content > ul {
  list-style: square inside;
}

.content li p {
  display: inline;
}

.content a {
  color: #368ccb;
}

